initial draft of new section 3

--- a/Longitudinal-Dynamics.ipynb
+++ b/Longitudinal-Dynamics.ipynb
@@ -435,12 +435,15 @@
     "###########################\n",
     "## Change these variables\n",
     "###########################\n",
-    "injection_phase_error = 0 # units=degrees, initial=0\n",
-    "injection_phase_width_modifier = 1.0 # multiplicative factor, initial=1\n",
-    "injection_energy_width_modifier = 1.0 # multiplicative factor, initial=1\n",
-    "voltage = 1.6*MeV # cavity voltage: initial = 1.6*MeV\n",
+    "# -- errors\n",
+    "voltage_error = 1 # multiplicative factor, initial = 1\n",
+    "injection_phase_error = 0 # initial phase shift, units=degrees, initial=0\n",
+    "\n",
+    "# -- plotting\n",
     "Nturns = 1000 # number of turns to plot. Initial=1000\n",
     "nplots = 4 # number of frames to plot. Initial=4\n",
+    "plot_tracers_Flag = True # initial=True\n",
+    "ntracers= 20\n",
     "\n",
     "###########################\n",
     "## Don't change below\n",
@@ -453,60 +456,57 @@
     "eta3    = 1/g_t3**2 - (0.938*GeV)**2 / E_s3**2\n",
     "beta_s3 = np.sqrt(1 - ( (0.938*GeV) / E_s3 )**2 )  # Relativistic beta\n",
     "k3      = (2*np.pi*h*eta3)/(beta_s3**2 * E_s3)     # coefficent (2pi h eta)/ (beta^2 E)\n",
-    "\n",
+    "voltage = (1.6 * voltage_error)*MeV # cavity voltage: initial = 1.6*MeV\n",
     "\n",
     "# Making data arrays\n",
-    "n = nparticles + 10\n",
+    "n = nparticles + ntracers\n",
     "phi_vals3 = np.zeros([n,Nturns+1])\n",
     "dE_vals3  = np.zeros([n,Nturns+1])\n",
     "H = np.zeros([n,Nturns+1])\n",
     "ez_vals3  = np.zeros([Nturns+1]) \n",
-    "synch_phase = np.zeros([Nturns+1])\n",
+    "\n",
     "\n",
     "# Initial conditions\n",
     "# -- first 10 particles are tracers; start these at same phase \n",
-    "dE_vals3[0:10,0]  = np.array(np.zeros(10))*MeV # Initial Energy of particles in MeV\n",
-    "phi_vals3[0:10,0] = np.deg2rad(np.linspace(0,50,10))   # Intial Phase of particles in degrees: 0,0,0,0,0\n",
+    "dE_vals3[0:ntracers,0]  = np.array(np.zeros(ntracers))*MeV # Initial Energy of particles in MeV\n",
+    "phi_vals3[0:ntracers,0] = np.deg2rad(np.linspace(0,50,ntracers))   # Intial Phase of particles in degrees: 0,0,0,0,0\n",
     "\n",
     "# -- rest of particles are distributed on contours of Hamiltonian\n",
-    "phi_vals3[10:,0] = injection_phase_width_modifier*(phi_init) + np.deg2rad(injection_phase_error)\n",
-    "dE_vals3[10:,0]  = injection_energy_width_modifier*dE_init \n",
-    "synch_phase[0] = 0\n",
-    "\n",
+    "phi_vals3[ntracers:,0] = phi_init + np.deg2rad(injection_phase_error)\n",
+    "dE_vals3[ntracers:,0]  = dE_init \n",
     "\n",
     "\n",
     "# -- initial emittance\n",
-    "idx = list(range(10,n))\n",
-    "phisq = np.mean(np.rad2deg(phi_vals3[idx,0]-synch_phase[0])**2)\n",
+    "idx = list(range(ntracers,n))\n",
+    "phisq = np.mean(np.rad2deg(phi_vals3[idx,0]-phi_sf3)**2)\n",
     "dEsq = np.mean(((dE_vals3[idx,0])/MeV)**2)\n",
-    "phidE = np.mean(np.rad2deg(phi_vals3[idx,0]-synch_phase[0])*(dE_vals3[idx,0])/MeV)\n",
+    "phidE = np.mean(np.rad2deg(phi_vals3[idx,0]-phi_sf3)*(dE_vals3[idx,0])/MeV)\n",
     "ez_vals3[0] = np.sqrt(phisq*dEsq - phidE**2)\n",
     "\n",
     "# -- initial action\n",
-    "H[:,0] = 0.5*k3*(dE_vals3[:,0])**2 + voltage*(np.cos(phi_vals3[:,0]) - np.cos(synch_phase[0]) + (phi_vals3[:,0] - synch_phase[0])*np.sin(synch_phase[0]))\n",
-    "\n",
+    "H[:,0] = k3/(4*np.pi)*(dE_vals3[:,0])**2 + voltage/(2*np.pi)*(np.cos(phi_vals3[:,0]) - np.cos(phi_sf3) + (phi_vals3[:,0] - phi_sf3)*np.sin(phi_sf3))\n",
+    "H_max_bunch = np.min(H[:,0])\n",
     "\n",
     "# Looping through Nturns turns\n",
     "for i in range(0,Nturns): \n",
-    "    synch_phase[i+1] = np.deg2rad(0)\n",
     "\n",
     "    #Angles\n",
     "    radians3 = phi_vals3[:,i]\n",
     "    \n",
     "    #dE_n+1 = dE_n + eV* ( sin(phi_n) - sin(phi_s) )\n",
-    "    dE_vals3[:,i+1]  = dE_vals3[:,i] + voltage*( np.sin(radians3) - np.sin(synch_phase[i]) )\n",
+    "    dE_vals3[:,i+1]  = dE_vals3[:,i] + voltage*( np.sin(radians3) - np.sin(phi_sf3) )\n",
     "    \n",
     "    #phi_n+1 = phi + k * dE_n + eV ( sin(phi_n) - sin(phi_s) )\n",
-    "    phi_vals3[:,i+1] = phi_vals3[:,i] + k3* ( dE_vals3[:,i] + voltage* ( np.sin(phi_vals3[:,i]) - np.sin(synch_phase[i])) ) \n",
+    "    phi_vals3[:,i+1] = phi_vals3[:,i] + k3* ( dE_vals3[:,i] + voltage* ( np.sin(phi_vals3[:,i]) - np.sin(phi_sf3)) ) \n",
     "    \n",
     "    # -- emittance calculation \n",
-    "    phisq = np.mean(np.rad2deg(phi_vals3[idx,i+1]-synch_phase[i+1])**2)\n",
+    "    phisq = np.mean(np.rad2deg(phi_vals3[idx,i+1]-phi_sf3)**2)\n",
     "    dEsq = np.mean(((dE_vals3[idx,i+1])/MeV)**2)\n",
-    "    phidE = np.mean(np.rad2deg(phi_vals3[idx,i+1]-synch_phase[i+1])*(dE_vals3[idx,i+1])/MeV)\n",
+    "    phidE = np.mean(np.rad2deg(phi_vals3[idx,i+1]-phi_sf3)*(dE_vals3[idx,i+1])/MeV)\n",
     "    ez_vals3[i+1] = np.sqrt(phisq*dEsq - phidE**2)\n",
     "    \n",
     "    # -- action\n",
-    "    H[:,i+1] = 0.5*k3*(dE_vals3[:,i+1])**2 + voltage*(np.cos(phi_vals3[:,i+1]) - np.cos(synch_phase[i+1]) + (phi_vals3[:,i+1] - synch_phase[i+1])*np.sin(synch_phase[i+1]))\n",
+    "    H[:,i+1] = k3/(4*np.pi)*(dE_vals3[:,i+1])**2 + voltage/(2*np.pi)*(np.cos(phi_vals3[:,i+1]) - np.cos(phi_sf3) + (phi_vals3[:,i+1] - phi_sf3)*np.sin(phi_sf3))\n",
     "    \n",
     "# Plotting the emittance\n",
     "plt.figure(figsize=[12,3])\n",
@@ -521,11 +521,11 @@
     "if (yl[1]-yl[0] < .05):\n",
     "    plt.ylim([.99,1.05])\n",
     "# -- labels and legends\n",
-    "plt.xticks(np.arange(0,Nturns,70))\n",
+    "#plt.xticks(np.arange(0,Nturns,70))\n",
     "plt.xlim([0,Nturns])\n",
     "plt.grid(True)\n",
     "plt.xlabel('Turns')\n",
-    "plt.ylabel('Emittance [deg MeV]')\n",
+    "plt.ylabel('Emittance [arb. units]')\n",
     "\n",
     "\n",
     "degrees3 = np.rad2deg(phi_vals3) #Deg\n",
@@ -535,12 +535,15 @@
     "plt.figure(figsize=[12,3*nrows])\n",
     "for i in range(len(turns_to_plot)):\n",
     "    plt.subplot(nrows,ncols,i+1)\n",
-    "    HGRID = k3/(4*np.pi)*DE**2 + voltage/(2*np.pi)*(np.cos(PHI) - np.cos(synch_phase[turns_to_plot[i]]) + (PHI - synch_phase[turns_to_plot[i]])*np.sin(synch_phase[turns_to_plot[i]]))\n",
-    "    plt.contour(np.rad2deg(PHI),DE/MeV,HGRID,11)\n",
-    "    plt.contour(np.rad2deg(PHI),DE/MeV,HGRID,[-H_max],colors='r',alpha=.5)\n",
-    "    plt.plot(degrees3[10:,int(turns_to_plot[i])],dE_vals3[10:,int(turns_to_plot[i])]/MeV, '.C0', markersize=1,alpha=1)\n",
-    "    plt.plot(degrees3[:10,int(turns_to_plot[i])],dE_vals3[:10,int(turns_to_plot[i])]/MeV, '.-k', markersize=5,alpha=1)    \n",
+    "    HGRID = k3/(4*np.pi)*DE**2 + voltage/(2*np.pi)*(np.cos(PHI) - np.cos(phi_sf3) + (PHI - phi_sf3)*np.sin(phi_sf3))\n",
+    "    plt.contour(np.rad2deg(PHI),DE/MeV,HGRID,11); \n",
+    "    yl = plt.ylim(); xl = plt.xlim()\n",
+    "    plt.contour(np.rad2deg(PHI),DE/MeV,HGRID,[H_max_bunch],colors='r',alpha=1)\n",
+    "    plt.plot(degrees3[ntracers:,int(turns_to_plot[i])],dE_vals3[ntracers:,int(turns_to_plot[i])]/MeV, '.C0', markersize=1,alpha=1)\n",
+    "    if plot_tracers_Flag:\n",
+    "        plt.plot(degrees3[:ntracers,int(turns_to_plot[i])],dE_vals3[:ntracers,int(turns_to_plot[i])]/MeV, '.-k', markersize=5,alpha=1)    \n",
     "    plt.title('Turn = %i'%int(turns_to_plot[i]))\n",
+    "    plt.xlim(xl); plt.ylim(yl)\n",
     "plt.tight_layout()\n"
    ]
   },
@@ -554,21 +557,45 @@
     "\n",
     "This spiraling is a result of the amplitude-dependent tune that you measured in Section 2. The amplitude dependence arises from the fact that the focusing in the RF bucket is not linear, but instead the focusing strength decreases the farther particles get from the center. \n",
     "\n",
-    "*This section is a work in progress*: Add some instructions here to mismatch the beam in various ways. Can use dipole phase mismatch to calculate needed precision in timing system. Could also build emittance-vs-mismatch curves.\n",
-    "\n",
-    "Now, we will look at the effect of various errors:\n",
-    "\n",
-    "### 3.1 Voltage mismatch\n",
-    "\n",
-    "### 3.2 Frequency mismatch\n",
-    "\n",
-    "### 3.3 Timing error\n",
-    "\n",
-    "\n",
-    "The amplitude-dependent tune of the RF system causes *filamentation* of a mismatched beam. This damps out the mismatch oscillation, leading to a distribution that is matched but has a larger emittance.\n",
+    "Now, we will look at the effect of various errors. In order to view the distribution more clearly, turn off the black trace by setting `plot_tracer_Flag = False`. Increase `nplots=8`. The red contour highlights the field contour of the particle with the highest *action*. In other words, the outermost particle will live on this contour.\n",
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.1 Voltage mismatch\n",
+    "\n",
+    "The bunch is matched to a voltage of 1.6 MV. The variable `voltage_error` is a multiplicative factor. Try several different errors in the range 2 - 10 and note the effect on the particle distribution and emittance.\n",
+    "Also note that the initial coordinates of the bunch have not changed - the only thing that has changed is the amplitude of the RF field.\n",
+    "\n",
+    "Set `voltage_error` to 10. The stretching of the original ellipse to be a spiral with many thin striations is a process known as *filamentation.*\n",
+    "\n",
+    "**Q13) When you increase the RF voltage, what happens to the width of the RF bucket in energy? In phase? ALso describe the effect on the rms emittance.**\n",
+    "\n",
+    "Set `voltage_error` to 5. You should see that emittance grows about 35% and then saturates after around 500 turns. \n",
+    "\n",
+    "**Q14) What is happening to the initially mismatched beam that causes emittance growth? Why does that growth saturate?**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2 Timing error\n",
+    "\n",
+    "Another likely source of emittance growth is if we don't inject at the right phase. In other words, we need to carefully control the relative timing of this RF system with the upstream RF. Slowly increase the variable `injection_phase_error` in steps of 5-10 degrees up to 45 degrees. \n",
+    "\n",
+    "**Q15) Does the beam stay at the injected phase, or become centered at the synchronous phase (phi=0 here)?**\n",
+    "\n",
+    "**Q16) If we require that emittance growth be below 1%, to what precision do we need to be able to control the timing?** \n",
+    "\n",
+    "Give your answer in nanoseconds. Assume the RF frequency is $f=100$ MHz.\n",
+    "\n",
+    "hint: you may need to increase Nturns to see the saturation of emittance at 1%."
    ]
   },
   {
