--- a/Longitudinal-Dynamics.ipynb
+++ b/Longitudinal-Dynamics.ipynb
@@ -438,6 +438,7 @@
     "# -- errors\n",
     "voltage_error = 1 # multiplicative factor, initial = 1\n",
     "injection_phase_error = 0 # initial phase shift, units=degrees, initial=0\n",
+    "injection_energy_error = 0 # initial energy offset, units=MeV, initial=0\n",
     "\n",
     "# -- plotting\n",
     "Nturns = 1000 # number of turns to plot. Initial=1000\n",
@@ -473,7 +474,7 @@
     "\n",
     "# -- rest of particles are distributed on contours of Hamiltonian\n",
     "phi_vals3[ntracers:,0] = phi_init + np.deg2rad(injection_phase_error)\n",
-    "dE_vals3[ntracers:,0]  = dE_init \n",
+    "dE_vals3[ntracers:,0]  = dE_init + injection_energy_error*MeV\n",
     "\n",
     "\n",
     "# -- initial emittance\n",
@@ -572,9 +573,9 @@
     "The bunch is matched to a voltage of 1.6 MV. The variable `voltage_error` is a multiplicative factor. Try several different errors in the range 2 - 10 and note the effect on the particle distribution and emittance.\n",
     "Also note that the initial coordinates of the bunch have not changed - the only thing that has changed is the amplitude of the RF field.\n",
     "\n",
-    "Set `voltage_error` to 10. The stretching of the original ellipse to be a spiral with many thin striations is a process known as *filamentation.*\n",
+    "Set `voltage_error` to 10. The elongation of the original ellipse to be a spiral with thin arms is a process known as *filamentation.*\n",
     "\n",
-    "**Q13) When you increase the RF voltage, what happens to the width of the RF bucket in energy? In phase? ALso describe the effect on the rms emittance.**\n",
+    "**Q13) When you increase the RF voltage, what happens to the width of the RF bucket in energy? In phase? Also describe the effect on the rms emittance.**\n",
     "\n",
     "Set `voltage_error` to 5. You should see that emittance grows about 35% and then saturates after around 500 turns. \n",
     "\n",
@@ -587,15 +588,32 @@
    "source": [
     "### 3.2 Timing error\n",
     "\n",
-    "Another likely source of emittance growth is if we don't inject at the right phase. In other words, we need to carefully control the relative timing of this RF system with the upstream RF. Slowly increase the variable `injection_phase_error` in steps of 5-10 degrees up to 45 degrees. \n",
+    "Another likely source of emittance growth is if we don't inject at the right phase. In other words, we need to carefully control the relative timing of this RF system with the upstream RF. \n",
     "\n",
-    "**Q15) Does the beam stay at the injected phase, or become centered at the synchronous phase (phi=0 here)?**\n",
+    "First return `voltage_error=1`. Then, slowly increase the variable `injection_phase_error` in steps of 5-10 degrees up to 45 degrees. \n",
+    "\n",
+    "**Q15) Does the beam stay at the injected phase, or become centered at the synchronous phase ($\\phi=0$)?**\n",
     "\n",
     "**Q16) If we require that emittance growth be below 1%, to what precision do we need to be able to control the timing?** \n",
     "\n",
     "Give your answer in nanoseconds. Assume the RF frequency is $f=100$ MHz.\n",
     "\n",
     "hint: you may need to increase Nturns to see the saturation of emittance at 1%."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.3 Injection energy error\n",
+    "\n",
+    "Depending on the application, emittance growth is not always a bad thing. High intensity proton machines transport beams with large emittance to mitigate resonance effects that get worse at high beam densities (these fall under the umbrella of *space charge* effects. In the J-PARC synchroton, off-energy injection is used to increase the longitudinal beam emittance.\n",
+    "\n",
+    "Return `injection_phase_error=0`. Use the parameter `injection_energy_error` to explore the effect of off-energy injection.\n",
+    "\n",
+    "**Q17) If you needed to reduce the injected beam density to 80% of its initial value, what energy error would you use?** Give answer to a precision of 1 MeV and as a fractional error $\\frac{\\delta T}{T}$. \n",
+    "\n",
+    "Note that the synchronous energy of this system is set at 8 GeV."
    ]
   },
   {
