Made changes for clarification, added questions including 1 conceptual, adjusted question numbers

--- a/FODO-transport.ipynb
+++ b/FODO-transport.ipynb
@@ -144,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Q2) What are the average, max and min RMS beam spot sizes for a matched beam in this lattice?**\n",
+    "**Q3) What are the average, max and min RMS beam spot sizes for a matched beam in this lattice?**\n",
     "- Use the calculated Twiss parameters and recall that transverse size is $\\sigma_x=\\sqrt{\\beta_x \\epsilon_x}$ \n",
     "- Hint: click on plot points to display values"
    ]
@@ -160,9 +160,27 @@
     "| $<\\sigma_x>_s$        | ..... |   $<\\sigma_y>_s$       | .... |\n",
     "| max $\\sigma_x (s)= $  | ..... |  max $\\sigma_y (s)= $  | .... | \n",
     "| min $\\sigma_x (s) = $ | ..... |  min $\\sigma_y (s) = $ | .... | \n",
+    "| max⁡ $\\left( \\frac{\\sigma_{x}}{\\sigma_{y}}\\right)$ | ..... | "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Q4) Where along the lattice is the beam round? Where is it largest and smallest in the horizontal plane? In the vertical plane? Give your answer in s (meters) and in terms of elements (Focusing quad, de-focusing quad, drift)**\n",
+    "\n",
+    "| condition                     | location in s (meters) |   Lattice element      | \n",
+    "|-----------------------        |-------                 |------------------------|\n",
+    "| round ($\\sigma_x = \\sigma_y$) | ...                    |   ...                  |\n",
+    "| max $\\sigma_x (s) $           | ...                    |   ...                  | \n",
+    "| min $\\sigma_x (s) $           | ...                    |   ...                  | \n",
+    "| max $\\sigma_y (s) $           | ...                    |   ...                  | \n",
+    "| min $\\sigma_y (s) $           | ...                    |   ...                  | \n",
     "\n",
     "\n",
-    "max⁡ $\\frac{\\sigma_{x}}{\\sigma_{y}}=$"
+    "This variation of the matched envelope size along the beamline is characteristic of alternating gradient quadrupole focusing. There are other patterns used for quadrupole focusing, but the FODO arrangement is popular due to simplicity and good efficiency of focusing (small beam size per applied quadrupole field strength).\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -178,7 +196,7 @@
     "- Simulate the beam in this longer (100 m) lattice. \n",
     "- Note the periodicity of the beam envelope in both the twiss_output plot (showing beta functions) and the run_setup.sigma plot (showing rms size). \n",
     "\n",
-    "**Q3) Confirm that the tune of this lattice is consistent with the 1-cell solution:**    "
+    "**Q5) Confirm that the tune of this lattice is consistent with the 1-cell solution:**    "
    ]
   },
   {
@@ -215,6 +233,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Q6) How many oscillations does a single particle make in 100 m?**\n",
+    "\n",
+    "Hint: You can calculate this easily, but you can also visualize single particle motion by giving the initial beam a centroid error. The centroid follows the equations of motion of a single particle. Look at the “run_setup.centroid” plot and count the approximate number of oscillations in the centroid. If you plot the centroid, you may need to adjust the plot axis.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### D) Propagation of mismatched beam\n",
     "\n",
     "We will initialize our beam with a 10% mismatch and examine the effect this has on transport.  \n",
@@ -240,20 +267,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Q4) Count the (approximate) number of oscillations in the envelope over the 100 meter beamline. Write your answer here:** \n",
+    "**Q7) Count the (approximate) number of envelope mismatch oscillations over the 100 meter beamline. Write your answer here:** \n",
     "\n",
-    "Hint, this is not the number of $\\sigma_x$ max or mins. This is the number of ocilations of the whole envelop, i.e. the answer is < 10."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The centroid oscillates at the betatron frequency, making $\\nu$ oscillations per pass through a periodic structure. \n",
+    "Remember, this is not the number of $\\sigma_x$ extrema. We want to look at oscillation around the matched envelope solution. The matched solution has a period that matches the length of the FODO cell. The envelope mismatch oscillation has a much longer period. \n",
     "\n",
-    "**Q5) How many oscillations does the centroid make in 100 m? Write your answer here:**\n",
-    "\n",
-    "Hint: Look at the “run_setup.centroid” plot and count the approximate number of oscillations in the centroid, or just refer to the tune under twiss_output. If you plot the centroid, you may need to adjust the plot axis.\n"
+    "Using the smooth approximation (constant focusing), we expect the frequency of the envelope oscillation to be twice that of single particle oscillation: $\\nu_{envelope} = 2 \\nu$. Does your answer to Q7 agree with this theoretical prediction?"
    ]
   },
   {
