added instructions for introducing centroid offset

--- a/FODO-transport.ipynb
+++ b/FODO-transport.ipynb
@@ -235,7 +235,9 @@
    "source": [
     "**Q6) How many oscillations does a single particle make in 100 m?**\n",
     "\n",
-    "Hint: You can calculate this easily, but you can also visualize single particle motion by giving the initial beam a centroid error. The centroid follows the equations of motion of a single particle. Look at the “run_setup.centroid” plot and count the approximate number of oscillations in the centroid. If you plot the centroid, you may need to adjust the plot axis.\n"
+    "Hint: You can calculate this easily, but you can also visualize single particle motion by giving the initial beam a centroid error. The centroid follows the equations of motion of a single particle. \n",
+    "\n",
+    "In Sirepo/elegant, under \"Control\" tab, \"Bunched Beam\" module, Page 5 you will see options for introducing a centroid offsetLook at the “run_setup.centroid” plot and count the approximate number of oscillations in the centroid. If you plot the centroid, you may need to adjust the plot axis.\n"
    ]
   },
   {
