Kiersten/Nick edits to FODO-transport through Section E. Added Section F. Section G marked for addition of exercise in matching insert

--- a/FODO-transport.ipynb
+++ b/FODO-transport.ipynb
@@ -97,7 +97,7 @@
     "\n",
     "**Q0) In the next cell, calculate the X and Y phase advances for the single FODO cell. (Search for nux and nuy under “Output Parameters” and recall $\\psi=\\nu*2\\pi$)**\n",
     "\n",
-    "Note that Elegant displays units as $1/(2\\pi)$. This is meant to indicate that the tune is number of oscillations divided by \"revolutions,\" which in this case is passes through our single-cell lattice."
+    "Note that Elegant displays units as $1/(2\\pi)$. This is meant to indicate that the tune is the number of oscillations divided by one revolution. In this case, 1 revolution is equal to 1 pass through the single FODO cell. There is no need to multiply or divide by $2\\pi$ in your answer."
    ]
   },
   {
@@ -235,9 +235,9 @@
    "source": [
     "**Q6) How many oscillations does a single particle make in 100 m?**\n",
     "\n",
-    "Hint: You can calculate this easily, but you can also visualize single particle motion by giving the initial beam a centroid error. The centroid follows the equations of motion of a single particle. \n",
+    "You can calculate this easily, but you can also visualize single particle motion by giving the initial beam a centroid error. The centroid follows the equations of motion of a single particle. \n",
     "\n",
-    "In Sirepo/elegant, under \"Control\" tab, \"Bunched Beam\" module, Page 5 you will see options for introducing a centroid offsetLook at the “run_setup.centroid” plot and count the approximate number of oscillations in the centroid. If you plot the centroid, you may need to adjust the plot axis.\n"
+    "In Sirepo/elegant, under \"Control\" tab, \"Bunched Beam\" module, Page 5 you will see options for introducing a centroid offset. Under \"Visualization\" tab, look at the “run_setup.centroid” plot and count the approximate number of oscillations in the centroid. If you plot the centroid, you may need to adjust the plot axis.\n"
    ]
   },
   {
@@ -247,8 +247,8 @@
     "### D) Propagation of mismatched beam\n",
     "\n",
     "We will initialize our beam with a 10% mismatch and examine the effect this has on transport.  \n",
-    "The previous visualization gave a periodic solution with $\\beta_x = \\beta_y = 7.206$ meters and $\\alpha_x = -\\alpha_y = 1.122$. \n",
-    "- You can verify $\\beta$ and $\\alpha$ by interacting with the twiss_output plot or downloading the data in CSV format.\n",
+    "The previous visualization gave a periodic solution with $\\beta_x = \\beta_y = 7.206$ meters and $\\alpha_x = -\\alpha_y = -1.146$. \n",
+    "- You can verify $\\beta$ and $\\alpha$ by interacting with the twiss_output plot (or downloading and viewing the data in CSV format).\n",
     "\n",
     "Under the “Control” Tab and “twiss_output” module: \n",
     "- Initialize a mismatched beam, by setting the following fields:\n",
@@ -257,9 +257,9 @@
     "|---|---| \n",
     "| Matched  | No |   \n",
     "|  Beta X  | 7.206 * 1.1 |  \n",
-    "|  Alpha X | -1.178 |  \n",
+    "|  Alpha X | -1.146 |  \n",
     "|  Beta Y  | 7.206 * 1.1  |\n",
-    "|  Alpha Y | 1.178 | \n",
+    "|  Alpha Y | 1.146 | \n",
     "\n",
     "\n",
     "You should observe that the envelope solution is not longer periodic with the cell length (5 m), but “beats”/ oscillates about the matched, stationary solution. "
@@ -273,44 +273,129 @@
     "\n",
     "Remember, this is not the number of $\\sigma_x$ extrema. We want to look at oscillation around the matched envelope solution. The matched solution has a period that matches the length of the FODO cell. The envelope mismatch oscillation has a much longer period. \n",
     "\n",
-    "Using the smooth approximation (constant focusing), we expect the frequency of the envelope oscillation to be twice that of single particle oscillation: $\\nu_{envelope} = 2 \\nu$. Does your answer to Q7 agree with this theoretical prediction?"
+    "Using the smooth approximation (constant focusing), we expect the frequency of the envelope oscillation to be twice that of single particle oscillation: $\\nu_{envelope} = 2 \\nu$. \\\n",
+    "**The second part of (Q7): Does your answer from simulation agree with this theoretical prediction?**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### E) Matched and mismatched beam in lattice with weaker focusing\n",
+    "### E) Matched solution with decreased focusing strength\n",
     "\n",
-    "We’ll repeat the exercise for a case with weaker focusing than the previous example. We will reduce the quadrupole focusing term K but hold the emittance fixed, so in the RMS envelope equation the relative strength of the focusing term (proportional to K) against the defocusing emittance term (proportional to $\\epsilon$) is less:\n",
+    "Now we will look at what happens to the matched solution when we reduce the strength of quadrupole focusing. We will reduce the quadrupole strength but hold the emittance fixed. If we consider the RMS envelope equation:\n",
     "\n",
     "$\\frac{d^2 \\sigma_x}{ds^2}=-K_x \\sigma_x+  \\frac{\\epsilon_x^2}{\\sigma_x^3}$\n",
     "\n",
-    "As you will observe, the matched beam has a more symmetric aspect ratio but also a larger RMS size.\n",
-    "- Reduce your focusing strength to |k1|=0.2 m^(-2) for both quadrupoles. \n",
-    "- Edit elements under the “Lattice” tab. \n",
+    "the relative strength of the focusing term (proportional to K) against the defocusing emittance term (proportional to $\\epsilon$) is less.\n",
     "\n",
-    "**Q6) In simulation, calculate the matched envelope values:**"
+    "Predict what effect you expect the weaker focusing will have on the matched solution. Will the average beam size along the cell get larger or smaller? Will the aspect ratio between $\\sigma_x$ and $\\sigma_y$ inside the quadrupoles get larger or smaller?\n",
+    "\n",
+    "1) Construct a new FODO cell with weaker focusing.\\\n",
+    "Under the \"Lattice\" tab \"Beamlines\" box click \"New Beamline.\" We will name this new cell \"FODOcell2.\"\n",
+    "\\\n",
+    "Make \"FODOcell2\" identical to \"FODOcell\" except with change $|k1|=0.6 m^{-2}$ to $|k1|=0.2 m^{-2}$ for both quadrupoles.\n",
+    "\\\n",
+    "<font color='red'> Important: Do not edit \"FODOcell\" or the quads \"QD\" or \"QF.\"</font> \\\n",
+    "In addition to a new beamline, make new quads under \"Beamline Elements\" to use in your new cell.\\\n",
+    "You can re-use the drift elements. \n",
+    "\n",
+    "2) Simulate bunch evolution through \"FODOcell2\" \\\n",
+    "Ask Elegant to calculate the matched beam: \"Control\" tab, \"twiss_output\" command, Page 1, set \"Matched\"=Yes.\\\n",
+    "Make sure to select \"FODOcell2\" from the dropdown menu in the \"Visualization\" tab.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\psi_x = $ \n",
+    "**Q8) Record the matched envelope values in the new FODO cell:**\n",
     "\n",
-    "$\\psi_y = $ \n",
-    "\n",
-    "max $\\sigma_x (s)= $ \n",
-    "\n",
-    "min $\\sigma_x (s) = $ \n",
-    "\n",
-    "$<\\sigma_x>_s$  =\n",
-    "\n",
-    "max⁡ $\\frac{\\sigma_{x}}{\\sigma_{y}}=$\n",
-    "\n",
-    "----"
+    "| X dimension           | Value |   Y dimension          | Value|\n",
+    "|-----------------------|-------|------------------------|------|\n",
+    "| $<\\sigma_x>_s=$        | ..... |   $<\\sigma_y>_s=$       | ..... |\n",
+    "| max $\\sigma_x (s)= $  | ..... |  max $\\sigma_y (s)= $  | ..... | \n",
+    "| min $\\sigma_x (s) = $ | ..... |  min $\\sigma_y (s) = $ | ..... | \n",
+    "| max⁡ $\\left( \\frac{\\sigma_{x}}{\\sigma_{y}}\\right)=$ | ..... | | |\n",
+    "| $\\psi_x=$ | ..... | $\\psi_y =$ | ..... |\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### F) Injection mismatch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Accelerator complexes can contain many sections, where the focusing strength and quadrupole arrangement can be quite different between sections. We will consider a simplified version of this. We will first transport beam through a beamline comprised of 10 of our original \"FODOcell,\" then inject into a second line comprised of 10 weaker focusing copies of \"FODOcell2.\"  \n",
+    "\n",
+    "3. Set the focusing strength in \"FODOcell2\" to be closer to (but still weaker than) the focusing in \"FODOcell.\" Set the strength of each quadrupole in \"FODOcell2\" to be $|k1|=0.5 m^{-2}$.\n",
+    "\n",
+    "4. Make the hybrid beamline.\\\n",
+    "In \"FODObeamline\", first delete 10 instances of \"FODOcell.\"\\\n",
+    "Then, add 10 instances of \"FODOcell2\" to the end of the beamline.\n",
+    "\n",
+    "5. Simulate beam evoution through \"FODObeamline\" \\\n",
+    "First, Set Matched=No under the \"twiss_output\" command. \\\n",
+    "Also, set the initial Twiss parameters to be matched to \"FODOcell\": \\\n",
+    "$\\beta_x = \\beta_y = 7.206$ meters and $\\alpha_x = -\\alpha_y = -1.146$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Q9) Describe what happens as the beam transitions from the stronger to the weaker FODO cell. Is the beam matched in the first 10 cells? What about the last 10 cells?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6. Find the periodic solution for this hybrid beamline.\\\n",
+    "Let Elegant do this for you by setting Matched=Yes and re-running the simulation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Q10) Is this new solution matched over the period $L=100$ m (the length of \"FODObeamline\")?\\\n",
+    "Is this solution matched for the period $L=5$ m? (the length of a single FODO cell)?\\\n",
+    "Does there exist a solution that is matched for period $L=5$ m in all 20 cells?**\n",
+    "\n",
+    "Note that the maximum $\\sigma_x$ for this solution is larger than the maximum $\\sigma_x$ for both matched solutions calculated previously. A strong motivation for maintaining matched beams is to keep the beam as small as possible for the given quadrupole focusing strength. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### G) Matching section insert\n",
+    "\n",
+    "The typical strategy to transition beam between sections of the accelerator while maintaining optimal transport is to add a matching section. This section contains quadrupoles whose strengths are optimized to transition the output bunch parameters $\\alpha, \\beta$ from the first section into the optimal (matched) parameters for the next section. A matching section can also be used to customize the beam parameters in a specific part of the accelerator. For example, in a collider  the beam is usually much smaller at the interaction point than elsewhere in the accelerator. \n",
+    "\n",
+    "Exercise with matching section to be added.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
