Added a section on matching section design

--- a/FODO-transport.ipynb
+++ b/FODO-transport.ipynb
@@ -7,8 +7,8 @@
     "![alt text](images/uspas.png)\n",
     "# Fundamentals of Accelerator Physics and Technology \n",
     "### (with Simulations and Measurements Lab)\n",
-    "# Computer Lab: Simulated beam transport in a FODO line\n",
-    "##### Author: K. Ruisard\n",
+    "# Computer Lab: Simulated beam transport in common accelerator sections\n",
+    "##### Authors: K. Ruisard and V.S. Morozov\n",
     "\n",
     "## We will be simulating beam transport in simple beamlines. To do this, we will be running the Elegant code in the [Sirepo](https://beta.sirepo.com) environment. Questions to be turned in for credit are in **bold** and numbered.\n",
     "### Python Notes: \n",
@@ -384,10 +384,54 @@
    "metadata": {},
    "source": [
     "### G) Matching section insert\n",
+    "We earlier studied beam transport in a FODO cell. However, an accelerator consists of not only FODO cells. There may be injection and extraction sections, experimental insertions, etc. For example, in a collider, the beam is usually much smaller at the interaction point than elsewhere in the accelerator. \n",
     "\n",
-    "The typical strategy to transition beam between sections of the accelerator while maintaining optimal transport is to add a matching section. This section contains quadrupoles whose strengths are optimized to transition the output bunch parameters $\\alpha, \\beta$ from the first section into the optimal (matched) parameters for the next section. A matching section can also be used to customize the beam parameters in a specific part of the accelerator. For example, in a collider  the beam is usually much smaller at the interaction point than elsewhere in the accelerator. \n",
+    "The typical strategy to transition beam between sections of the accelerator while maintaining optimal transport is to add a matching section. This section contains quadrupoles whose strengths are optimized to transition the output bunch parameters $\\alpha, \\beta$ from the first section into the optimal (matched) parameters for the next section. A matching section can also be used to customize the beam parameters in a specific part of the accelerator.\n",
     "\n",
-    "Exercise with matching section to be added.\n"
+    "In this exercise, we will be designing an injection section. The beam at injection is typically round and has independent distribtions of all phase-space coordinates. You have already seen from the FODO exercises that the beam distribution everywhere inside a FODO cell is not round and/or has non-zero correlation between the spatial and angular coordinates. We need to design a beamline section that takes the particle contribution at the end of the FODO cell and transforms it into a spatially round uncorrelated distribution. \n",
+    "\n",
+    "Open simulation “fodo2roundmatch.” Copy it to your own session (there should be a prompt).\n",
+    "> https://www.sirepo.com/elegant#/source/3fEOObZi\n",
+    "\n",
+    "In the \"Source\" tab:\n",
+    "- Set Twiss $\\beta_{x,y}$ and $\\alpha_{x,y}$ to those at the end of the FODO cell.\n",
+    "Note: this setting takes precedence over the Twiss function values specified in the \"twiss_output\" module under the \"Commands\" tab.\n",
+    "\n",
+    "Under “Lattice” tab: Edit the \"MATCHsection\" beamline. \n",
+    "- Define 4 new quadrupoles with the same dimensions as the FODO quads.\n",
+    "- Construct a section consisting of the 4 new quadrupoles with unique names with the same spacing between them as in the FODO lattice. Put a 1 m drift before the first quad and a 2 m drift after the last one.\n",
+    "- When defining the new quads assign initial guesses for their strength to be the same as the FODO quad strengths. When setting the positive or negative sign of the strengths, maintain the same alternating patter as in the FODO cell.\n",
+    "\n",
+    "Switch to the “Control” tab:  \n",
+    "- Add the strengths of quads 2-4 as \"optimization_varibale\"s following the example setup for quad 1 (QM1) \n",
+    "- Assuming that the horizontal and vertical emittances of the injected beam are equal, we would like to have equal horizontal and vertical beta functions at the end of the matching section: $\\beta_x = \\beta_y$. To have no correlation between the spatial and angular coordinates, the Twiss alpha funcitons have to be zero at the end of the section: $\\alpha_x = 0$ and $\\alpha_y =0$. Add the $\\beta_x = \\beta_y$ and $\\alpha_y =0$ constraints as \"optimization_term\"s following the example of that for $\\alpha_x = 0$.\n",
+    "\n",
+    "Under “Visualization” tab:\n",
+    "- Make sure to select \"MATCHsection\" in the \"Beamline\" menu.\n",
+    "- Run the simulation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Q1) Attach graphs of the input and output xx' distributions.**\n",
+    "\n",
+    "**Q2) Attach graphs of $\\beta_{x,y}$ before and after optimization.**\n",
+    "\n",
+    "**Q3) What are the final values of $\\beta_{x,y}$ at the end of \"MATCHsection\"?**\n",
+    "- Hint: you can click on the curves in the graphs under the \"Visualization\" tab and look up the values or examine the elegant log file.\n",
+    "\n",
+    "**Q4) What are the final strengths of the quads in \"MATCHsection\"?**\n",
+    "- Hint: you can click on the curves in the graphs under the \"Visualization\" tab and look up the values or examine the elegant log file.\n",
+    "\n",
+    "**Q5) (Extra credit) Design an entire injection insertion and show the resulting optics.**\n",
+    "- Add a reversed version of \"MATCHsection\" at the end of the \"injsection\" beamline under the \"Lattice\" tab and rerun the simulation under the \"Visualization\" tab.\n",
+    "1. Switch to the \"Lattice\" tab, hover your mouse over the \"injsection\" beamline and click \"edit\".\n",
+    "2. The beam line consists of two other lines \"FODOcell\" and \"MATCHsection\". You can see their elements by examining them in the beamline list or by right-clicking on them in the \"Beamline Editor\" window and selecting \"Unpack\".\n",
+    "3. Add elements to \"injection\" by examining the existing sequence, flipping the order of the elements and appending them in this reversed order, e.g. you would modify a line \"A, B, C\" by sequentially adding elements \"C\", \"B\", and \"A\" to get \"A, B, C, C, B, A\". Note that drifts count as elements.\n",
+    "4. Switch to the \"Visualization\" section. Under the simulation status, keep \"MATCHsection\" selected as a beamline. The command file is setup to start with that beamline and then to automatically continue on \"injsection\".\n",
+    "5. Click \"Start New Simulation\". In the \"twiss_output3\" window, you should now see a plot of the $\\beta$ functions of an insertion connecting regular FODO lattice to an injection section and then back to regular \"FODO\" lattice. Attach that graph here."
    ]
   },
   {
@@ -402,7 +446,7 @@
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
-   "name": "py3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -414,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
